# Sem4_Painter

./: CMakeLists.txt  canvasdialog.cpp  canvasdialog.h  domain.cpp  domain.h  main.cpp  mainwindow.cpp  mainwindow.h  qtcanvaswidget.cpp  qtcanvaswidget.h
for_real/: datasource.cpp  datasource.h
